	PR c++/5919 	* g++.dg/template/varmod1.C: New test.

PR c++/5919
	* pt.c (unify): Use variably_modified_type_p to test validity of
	template argument types.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@59698 138bc75d-0d04-0410-961f-82ee72b054a4